--- a/static/pdf/Day20/Day20.Rmd
+++ b/static/pdf/Day20/Day20.Rmd
@@ -465,7 +465,7 @@ class: middle
 
 .font110[.fancy[
 
-- We can map out the region in feature-space where the classifier would predict 'fire', and the kinds where it would predict 'not fire'
+- We can map out the region in feature-space where the classifier would predict 'fire' and where it would predict 'not fire'
 
 - There is some boundary between the two, where points on one side of
 the boundary will be classified 'fire' and points on the other side will be
@@ -643,8 +643,6 @@ predict(knn_fit, new_data = new_observations)
 Owned by the National Institute of Diabetes and Digestive and Kidney Diseases
 
 - A data frame with 768 observations on 9 variables.
-
-- We have the lab results of 158 patients, including whether they have CKD
 
 - Response variable: `diabetes` =	`pos`, `neg`
 
