--- a/content/post/2020-12-01-r-rmarkdown/index.en.Rmd
+++ b/content/post/2020-12-01-r-rmarkdown/index.en.Rmd
@@ -7,16 +7,16 @@ tags: ["R Markdown"]
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(collapse = TRUE)
+knitr::opts_chunk$set(collapse = TRUE, error = FALSE)
 ```
 
 # R Markdown
 
 This is a R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-You can use asterisk mark to provide emphasis, such as `*italics* or **bold**`.
+You can use asterisk mark to provide emphasis, such as `*italics* or **bold**` to produce *italics* or **bold**.
 
-You can create lists with a dash:
+You can create lists with a combination of dash, plus, or asterisk :
 
 ```r
 - Item 1
@@ -38,7 +38,7 @@ You can embed Latex equations in-line, $\frac{1}{n} \sum_{i=1}^{n} x_{i}$ or in 
 $$\text{Var}(X) = \frac{1}{n-1}\sum_{i-1}^{n} (x_{i} - \bar{x})^2 $$
 ## Embed an R code chunk:
 
-```
+```r
 Use back ticks to 
 create a block of code
 ```
@@ -70,7 +70,7 @@ pie(
 
 ```{r read_data}
 simple_data <- read.csv("https://deepbas.io/data/simple-1.dat", )
-glimpse(simple_data) 
+summary(simple_data) 
 ```
 
 
@@ -80,16 +80,10 @@ knitr::kable(simple_data, format = "html")
 
 ## Hide the code
 
-If we enter the `echo = FALSE` option in the R chunk (see the .Rmd file). This prevents the R code from being printed to your document; you just see the results.
+Entering `echo = FALSE` option in the R chunk prevents the R code from being printed to your document and you just see the results/outputs.
 
-```
 
-```{r pretty_table, echo=FALSE}
-knitr::kable(simple_data, format = "html")
-```
-```
-
-```{r pretty_table}
+```{r pretty_table2}
 knitr::kable(simple_data, format = "html")
 ```
 
